force-app/main/default/objects/BoredActivity__c/BoredActivity__c.object-meta.xml
<CustomObject>
    <label>BoredActivity</label>
    <nameField>
        <label>BoredActivity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BoredActivities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>