force-app/main/default/objects/BoredActivity__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <label>Access</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>