force-app/main/default/objects/BoredActivity__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>